force-app/main/default/objects/Submission_History__c/Submission_History__c.object-meta.xml
<CustomObject>
    <label>Submission History</label>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>Submission History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>