force-app/main/default/objects/Submission_History__c/fields/Ad_Unit_Formats__c.field-meta.xml
<CustomField>
    <fullName>Ad_Unit_Formats__c</fullName>
    <label>Ad Unit Formats</label>
    <length>100</length>
    <type>Text</type>
</CustomField>