force-app/main/default/objects/Submission_History__c/fields/eCPM__c.field-meta.xml
<CustomField>
    <fullName>eCPM__c</fullName>
    <label>eCPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>