force-app/main/default/objects/Submission_History__c/fields/Exception_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approval_Status__c</fullName>
    <label>Exception Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Exception</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Exception Rejected</fullName>
            </value>
            <value>
                <fullName>Exception Approved</fullName>
            </value>
            <value>
                <fullName>Requires Re-submission</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>