force-app/main/default/objects/Submission_History__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Below Floor Rates</fullName>
            </value>
            <value>
                <fullName>Below Minimum Spend (Canvas)</fullName>
            </value>
            <value>
                <fullName>Below Minimum Spend (Embedded Video)</fullName>
            </value>
            <value>
                <fullName>Below Minimum Spend (Overall Campaign)</fullName>
            </value>
            <value>
                <fullName>Extra Creative Fees/Waiver Creative Fees</fullName>
            </value>
            <value>
                <fullName>Higher % Added Value Impressions</fullName>
            </value>
            <value>
                <fullName>Higher % In-image Canvas</fullName>
            </value>
            <value>
                <fullName>Mock Request</fullName>
            </value>
            <value>
                <fullName>Multiple Creative Unit Versions</fullName>
            </value>
            <value>
                <fullName>Out Clause (Less than 7 days)</fullName>
            </value>
            <value>
                <fullName>Research Study</fullName>
            </value>
            <value>
                <fullName>Rolling Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>