force-app/main/default/objects/Submission_History__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <label>Justification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>