force-app/main/default/objects/Submission_History__c/fields/Specifics_of_Exception__c.field-meta.xml
<CustomField>
    <fullName>Specifics_of_Exception__c</fullName>
    <label>Specifics of Exception</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>