force-app/main/default/objects/Submission_History__c/fields/Submit_For_Exception_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_For_Exception_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit For Exception Approval</label>
    <type>Checkbox</type>
</CustomField>